--- a/application/Solution1/ScoreSystem.Application/ScoreSystem.Application.csproj
+++ b/application/Solution1/ScoreSystem.Application/ScoreSystem.Application.csproj
@@ -8,7 +8,9 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+      <PackageReference Include="Cassette" Version="2.4.2" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+      <PackageReference Include="RazorLight" Version="2.3.1" />
     </ItemGroup>
 
     <ItemGroup>
@@ -20,6 +22,10 @@
       <Reference Include="Microsoft.AspNetCore.Mvc.Core">
         <HintPath>..\..\..\..\..\.dotnet\shared\Microsoft.AspNetCore.App\7.0.9\Microsoft.AspNetCore.Mvc.Core.dll</HintPath>
       </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Template\ClientSide.cshtml" />
     </ItemGroup>
 
 </Project>
