--- a/application/Solution1/ScoreSystem.Domain/ScoreSystem.Domain.csproj
+++ b/application/Solution1/ScoreSystem.Domain/ScoreSystem.Domain.csproj
@@ -9,6 +9,8 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="12.0.1" />
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+      <PackageReference Include="Cassette" Version="2.4.2" />
+      <PackageReference Include="RazorLight" Version="2.3.1" />
     </ItemGroup>
 
     <ItemGroup>
